Fixed size for input on mobile

--- a/Namefy/style.css
+++ b/Namefy/style.css
@@ -177,7 +177,7 @@ and (max-width: 600px) {
 
 @media screen and (min-width: 601px) and (max-width: 1200px) {
     .functionality {
-        width: 90%;
+        width: 40%;
         position: relative;
         top: 8vh;
     }
